plugins {
    id 'java'
    id 'org.springframework.boot' version '3.5.8'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.sprint.mission'
version = '0.0.1-SNAPSHOT'
description = 'mission'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-web'
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    developmentOnly 'org.springframework.boot:spring-boot-devtools'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

    //swagger 의존성 추가
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.8'
    //jpa 의존성 추가
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    //postgresql 의존성 추가
    runtimeOnly 'org.postgresql:postgresql'

    //mapstruct 의존성 추가
    implementation 'org.mapstruct:mapstruct:1.6.3'
    annotationProcessor 'org.mapstruct:mapstruct-processor:1.6.3'

}


tasks.named('test') {
    useJUnitPlatform()
}
